# fastapi_suren

./: README.md  items_views.py  main.py  pyproject.toml
users/: crud.py  schemas.py  views.py
